--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,16 @@
 [package]
 name = "ffpb"
-version = "0.1.0"
+version = "0.1.3"
 edition = "2021"
+description = "A progress bar for ffmpeg."
+repository = "https://github.com/clitic/ffmpeg"
+documentation = "https://docs.rs/ffmpeg"
+categories = ["command-line-interface"]
+license = "MIT"
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-regex = ">=1.5.4"
-kdam = ">=0.1.0"
+regex = "1.5"
+kdam = "0.1.7"
