--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,8 @@ name = "ffpb"
 version = "0.1.0"
 edition = "2021"
 description = "A coloured progress bar for ffmpeg."
-repository = "https://github.com/clitic/ffmpeg"
-documentation = "https://docs.rs/ffmpeg"
+repository = "https://github.com/clitic/ffpb-rs"
+documentation = "https://docs.rs/ffpb"
 categories = ["command-line-interface"]
 license = "MIT"
 readme = "README.md"
